# makepad-component

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  chart_comprehensive_test.json  chart_test.json  kimi_test.json  math_showcase.json  ui_live.json
crates/a2ui-demo/: Cargo.toml  ui_live.json
crates/a2ui-demo/src/: a2ui_bridge.rs  app.rs  fft_demo.rs  kimi_bridge.rs  lib.rs  main.rs  math_charts.rs  mock_server.rs  streaming_demo.rs  streaming_main.rs  watch_server.rs
crates/a2ui-demo/src/a2ui_bridge_impl/: builder.rs  mureka.rs  server.rs  tools.rs  types.rs
crates/a2ui-demo/src/app/: logic.rs  mod.rs  sample_data.rs  theme.rs
crates/component-zoo/src/: app.rs
crates/component-zoo/src/app/: app_logic.rs  design.rs  json_render.rs  mod.rs  shaders.rs  splash_demo.rs
crates/makepad-plot/: Cargo.toml
crates/makepad-plot/src/: lib.rs  plot.rs
crates/makepad-plot/src/plot/: area.rs  bar.rs  bubble.rs  colormap.rs  contour.rs  dual.rs  financial.rs  gauge.rs  heatmap.rs  hexbin.rs  histogram.rs  line.rs  mod.rs  pie.rs  polar.rs  scale.rs  scatter.rs  scatter3d.rs  stack.rs  stem.rs  surface3d.rs  treemap.rs  types.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui/src/a2ui/: a2a_client.rs  chart_bridge.rs  data_model.rs  host.rs  message.rs  mod.rs  processor.rs  registry.rs  sse.rs  surface.rs
crates/ui/src/a2ui/chart_bridge/: advanced.rs  basic.rs  mod.rs  statistical.rs
crates/ui/src/a2ui/surface/: draw_types.rs  events_impl.rs  helpers.rs  mod.rs  render_charts_impl.rs  render_impl.rs  widget.rs
crates/ui/src/widgets/: alert.rs  drawer.rs  link.rs  mod.rs  space.rs  steps.rs  text.rs
docs/: A2UI_BRIDGE.md  A2UI_GUIDE_CN.md  A2UI_GUIDE_EN.md  KIMI_A2UI_BRIDGE.md
skills/makepad-widgets/: SKILL.md
skills/makepad-widgets/references/: widgets-richtext.md
