[workspace]
members = [
    "crates/ui",
    "crates/component-zoo",
    "crates/a2ui-demo",
    "crates/makepad-plot",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
makepad-component = { path = "crates/ui" }
makepad-plot = { path = "crates/makepad-plot" }
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "dev" }
