[package]
name = "a2ui-demo"
version.workspace = true
edition.workspace = true
description = "A2UI protocol demo for Makepad"

[[bin]]
name = "a2ui-demo"
path = "src/main.rs"

[[bin]]
name = "a2ui-streaming"
path = "src/streaming_main.rs"

[[bin]]
name = "mock-a2a-server"
path = "src/mock_server.rs"

[[bin]]
name = "watch-server"
path = "src/watch_server.rs"

[[bin]]
name = "a2ui-bridge"
path = "src/a2ui_bridge.rs"

[[bin]]
name = "math-charts"
path = "src/math_charts.rs"

[[bin]]
name = "fft-demo"
path = "src/fft_demo.rs"

[dependencies]
makepad-component = { workspace = true }
makepad-widgets = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

# Mock server dependencies
tokio = { version = "1", features = ["full"], optional = true }
hyper = { version = "1", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
mock-server = ["tokio", "hyper", "hyper-util", "http-body-util"]
a2ui-bridge = ["tokio", "hyper", "hyper-util", "http-body-util", "reqwest", "futures-util"]
mureka = ["a2ui-bridge"]  # Mureka AI music generation (requires MUREKA_API_KEY)
