[package]
name = "makepad-component"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UI components for Makepad applications"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
makepad-widgets = { workspace = true }
makepad-plot = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# A2A/SSE streaming support
ureq = { version = "2.9", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
